# clone-org-repos

./: CloneAllRepos.py  CloneOrgRepos.py  CloneOrgRepos.spec  LICENSE  README.md  clone_org_repos.ini  pyproject.toml
