[tool.poetry]
name = "cloneallrepos-by-org"
version = "0.1.0"
description = ""
authors = ["nturley <neil@copia.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
inquirerpy = "^0.3.4"
requests = "^2.32.3"
gitpython = "^3.1.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
